/*
 * Licensed to the Apache Software Foundation (ASF) under one or more
 * contributor license agreements.  See the NOTICE file distributed with
 * this work for additional information regarding copyright ownership.
 * The ASF licenses this file to You under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with
 * the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
option go_package="seata.apache.org/seata-go/sample/quick_start/pb";

message AccountDeductRequest {
  string user_id = 1;
  int64 money = 2;
}

message AccountQueryRequest {
  string user_id = 1;
}

message AccountResponse {
  string user_id = 1;
  int64 balance = 2;
  int64 freeze_amount = 3;
}

service AccountService {
  rpc Deduct (AccountDeductRequest) returns (AccountResponse);
}